RESOLVED FIXED48503
resetAssertionMatches() is an unused function in YARR Interpreter
https://bugs.webkit.org/show_bug.cgi?id=48503
Summary resetAssertionMatches() is an unused function in YARR Interpreter
Peter Varga
Reported 2010-10-28 02:19:07 PDT
The resetAssertionMatches() function is never called therefore it should be removed.
Attachments
proposed patch (1.87 KB, patch)
2010-10-28 02:22 PDT, Peter Varga
no flags
Peter Varga
Comment 1 2010-10-28 02:22:11 PDT
Created attachment 72161 [details] proposed patch
WebKit Commit Bot
Comment 2 2010-10-28 04:17:34 PDT
Comment on attachment 72161 [details] proposed patch Clearing flags on attachment: 72161 Committed r70764: <http://trac.webkit.org/changeset/70764>
WebKit Commit Bot
Comment 3 2010-10-28 04:17:39 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4 2010-10-28 05:37:53 PDT
http://trac.webkit.org/changeset/70764 might have broken GTK Linux 32-bit Release The following tests are not passing: inspector/audits-panel-functional.html
Note You need to log in before you can comment on or make changes to this bug.