2010-10-28  Peter Varga  <pvarga@inf.u-szeged.hu>

Reviewed by Csaba Osztrogonác.

        resetAssertionMatches() is an unused function in YARR Interpreter
        https://bugs.webkit.org/show_bug.cgi?id=48503

        The resetAssertionMatches() function is removed from YARR Interpreter
        because it's never called.

        * yarr/RegexInterpreter.cpp:
        (JSC::Yarr::Interpreter::resetMatches):

Canonical link: https://commits.webkit.org/61279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70764 268f45cc-cd09-0410-ab3c-d52691b4dbfc